docs: add a message to the blank html example page

--- a/examples/esm/index.html
+++ b/examples/esm/index.html
@@ -11,5 +11,6 @@
       }
     </script>
     <script type="module" src="./index.js"></script>
+    Open the developer console with <code>Cmd + Option + J</code> (on a Mac) or <code>Ctrl + Shift + J</code> (on Windows) and check the log. You may need to refresh the page.
   </body>
 </html>
